--- a/antd-demo/src/css/App.css
+++ b/antd-demo/src/css/App.css
@@ -11,7 +11,10 @@
   background-color: #222;
   height: 150px;
   padding: 20px;
-  color: white;
+}
+
+.App-header h1 {
+  color: #ffffff;
 }
 
 .App-title {
